--- a/eWaterCycle-Visualization/settings.properties
+++ b/eWaterCycle-Visualization/settings.properties
@@ -180,76 +180,41 @@ SET_DIFF_MIN_H2=-50000
 SET_DIFF_MAX_H2=50000
 
 MIN_discharge=0
-MAX_discharge=10000
+MAX_discharge=20000
 SET_MIN_discharge=0
-SET_MAX_discharge=10000
+SET_MAX_discharge=20000
 DIFF_MIN_discharge=-50000
 DIFF_MAX_discharge=50000
 SET_DIFF_MIN_discharge=-50000
 SET_DIFF_MAX_discharge=50000
 
-MIN_snowCoverSWE=0
-MAX_snowCoverSWE=1
-SET_MIN_snowCoverSWE=0
-SET_MAX_snowCoverSWE=1
-DIFF_MIN_snowCoverSWE=-50000
-DIFF_MAX_snowCoverSWE=50000
-SET_DIFF_MIN_snowCoverSWE=-50000
-SET_DIFF_MAX_snowCoverSWE=50000
+MIN_statDegUpp=0
+MAX_statDegUpp=1.0
+SET_MIN_statDegUpp=0
+SET_MAX_statDegUpp=1.0
+DIFF_MIN_statDegUpp=-50000
+DIFF_MAX_statDegUpp=50000
+SET_DIFF_MIN_statDegUpp=-50000
+SET_DIFF_MAX_statDegUpp=50000
 
-MIN_storUpp000005=0
-MAX_storUpp000005=0.0339
-SET_MIN_storUpp000005=0
-SET_MAX_storUpp000005=0.0339
-DIFF_MIN_storUpp000005=-50000
-DIFF_MAX_storUpp000005=50000
-SET_DIFF_MIN_storUpp000005=-50000
-SET_DIFF_MAX_storUpp000005=50000
+MIN_statDegLow=0
+MAX_statDegLow=1.0
+SET_MIN_statDegLow=0
+SET_MAX_statDegLow=1.0
+DIFF_MIN_statDegLow=-50000
+DIFF_MAX_statDegLow=50000
+SET_DIFF_MIN_statDegLow=-50000
+SET_DIFF_MAX_statDegLow=50000
 
-MIN_storUpp005030=0
-MAX_storUpp005030=0.1330
-SET_MIN_storUpp005030=0
-SET_MAX_storUpp005030=0.1330
-DIFF_MIN_storUpp005030=-50000
-DIFF_MAX_storUpp005030=50000
-SET_DIFF_MIN_storUpp005030=-50000
-SET_DIFF_MAX_storUpp005030=50000
+MIN_recharge=-0.05
+MAX_recharge=0.05
+SET_MIN_recharge=-0.05
+SET_MAX_recharge=0.05
+DIFF_MIN_recharge=-50000
+DIFF_MAX_recharge=50000
+SET_DIFF_MIN_recharge=-50000
+SET_DIFF_MAX_recharge=50000
 
-MIN_storLow030150=0
-MAX_storLow030150=0.557
-SET_MIN_storLow030150=0
-SET_MAX_storLow030150=0.557
-DIFF_MIN_storLow030150=-50000
-DIFF_MAX_storLow030150=50000
-SET_DIFF_MIN_storLow030150=-50000
-SET_DIFF_MAX_storLow030150=50000
-
-MIN_satDegUpp000005=0
-MAX_satDegUpp000005=1
-SET_MIN_satDegUpp000005=0
-SET_MAX_satDegUpp000005=1
-DIFF_MIN_satDegUpp000005=-50000
-DIFF_MAX_satDegUpp000005=50000
-SET_DIFF_MIN_satDegUpp000005=-50000
-SET_DIFF_MAX_satDegUpp000005=50000
-
-MIN_satDegUpp005030=0
-MAX_satDegUpp005030=1
-SET_MIN_satDegUpp005030=0
-SET_MAX_satDegUpp005030=1
-DIFF_MIN_satDegUpp005030=-50000
-DIFF_MAX_satDegUpp005030=50000
-SET_DIFF_MIN_satDegUpp005030=-50000
-SET_DIFF_MAX_satDegUpp005030=50000
-
-MIN_satDegLow030150=0
-MAX_satDegLow030150=1
-SET_MIN_satDegLow030150=0
-SET_MAX_satDegLow030150=1
-DIFF_MIN_satDegLow030150=-50000
-DIFF_MAX_satDegLow030150=50000
-SET_DIFF_MIN_satDegLow030150=-50000
-SET_DIFF_MAX_satDegLow030150=50000
 
 MIN_precipitation=0
 MAX_precipitation=.1
