--- a/eWaterCycle-Visualization/settings.properties
+++ b/eWaterCycle-Visualization/settings.properties
@@ -188,23 +188,23 @@ DIFF_MAX_discharge=50000
 SET_DIFF_MIN_discharge=-50000
 SET_DIFF_MAX_discharge=50000
 
-MIN_statDegUpp=0
-MAX_statDegUpp=1.0
-SET_MIN_statDegUpp=0
-SET_MAX_statDegUpp=1.0
-DIFF_MIN_statDegUpp=-50000
-DIFF_MAX_statDegUpp=50000
-SET_DIFF_MIN_statDegUpp=-50000
-SET_DIFF_MAX_statDegUpp=50000
+MIN_satDegUpp=0
+MAX_satDegUpp=1.0
+SET_MIN_satDegUpp=0
+SET_MAX_satDegUpp=1.0
+DIFF_MIN_satDegUpp=-50000
+DIFF_MAX_satDegUpp=50000
+SET_DIFF_MIN_satDegUpp=-50000
+SET_DIFF_MAX_satDegUpp=50000
 
-MIN_statDegLow=0
-MAX_statDegLow=1.0
-SET_MIN_statDegLow=0
-SET_MAX_statDegLow=1.0
-DIFF_MIN_statDegLow=-50000
-DIFF_MAX_statDegLow=50000
-SET_DIFF_MIN_statDegLow=-50000
-SET_DIFF_MAX_statDegLow=50000
+MIN_satDegLow=0
+MAX_satDegLow=1.0
+SET_MIN_satDegLow=0
+SET_MAX_satDegLow=1.0
+DIFF_MIN_satDegLow=-50000
+DIFF_MAX_satDegLow=50000
+SET_DIFF_MIN_satDegLow=-50000
+SET_DIFF_MAX_satDegLow=50000
 
 MIN_recharge=-0.05
 MAX_recharge=0.05
