--- a/eWaterCycle-Visualization/settings.properties
+++ b/eWaterCycle-Visualization/settings.properties
@@ -179,14 +179,14 @@ DIFF_MAX_H2=50000
 SET_DIFF_MIN_H2=-50000
 SET_DIFF_MAX_H2=50000
 
-MIN_discharge=0
-MAX_discharge=20000
-SET_MIN_discharge=0
-SET_MAX_discharge=20000
-DIFF_MIN_discharge=-50000
-DIFF_MAX_discharge=50000
-SET_DIFF_MIN_discharge=-50000
-SET_DIFF_MAX_discharge=50000
+MIN_disChanWaterBody=0
+MAX_disChanWaterBody=20000
+SET_MIN_disChanWaterBody=0
+SET_MAX_disChanWaterBody=20000
+DIFF_MIN_disChanWaterBody=-50000
+DIFF_MAX_disChanWaterBody=50000
+SET_DIFF_MIN_disChanWaterBody=-50000
+SET_DIFF_MAX_disChanWaterBody=50000
 
 MIN_satDegUpp=0
 MAX_satDegUpp=1.0
@@ -206,14 +206,14 @@ DIFF_MAX_satDegLow=50000
 SET_DIFF_MIN_satDegLow=-50000
 SET_DIFF_MAX_satDegLow=50000
 
-MIN_recharge=-0.05
-MAX_recharge=0.05
-SET_MIN_recharge=-0.05
-SET_MAX_recharge=0.05
-DIFF_MIN_recharge=-50000
-DIFF_MAX_recharge=50000
-SET_DIFF_MIN_recharge=-50000
-SET_DIFF_MAX_recharge=50000
+MIN_gwRecharge=-0.05
+MAX_gwRecharge=0.05
+SET_MIN_gwRecharge=-0.05
+SET_MAX_gwRecharge=0.05
+DIFF_MIN_gwRecharge=-50000
+DIFF_MAX_gwRecharge=50000
+SET_DIFF_MIN_gwRecharge=-50000
+SET_DIFF_MAX_gwRecharge=50000
 
 
 MIN_precipitation=0
