--- a/eWaterCycle-Visualization/settings.properties
+++ b/eWaterCycle-Visualization/settings.properties
@@ -38,8 +38,11 @@ OCTREE_EDGES = 800f
 MAX_EXPECTED_MODELS = 1000
 
 # We can have the inverted gas color (for beamers) on by default
+#not used
 WAITTIME_FOR_RETRY = 5000
-WAITTIME_FOR_MOVIE = 5000
+
+#framerate limiter
+WAITTIME_FOR_MOVIE = 1000
 
 IMAGE_STREAM_OUTPUT = false
 
@@ -182,7 +185,7 @@ SET_DIFF_MAX_H2=50000
 MIN_disChanWaterBody=0
 MAX_disChanWaterBody=10000
 SET_MIN_disChanWaterBody=0
-SET_MAX_disChanWaterBody=20000
+SET_MAX_disChanWaterBody=10000
 DIFF_MIN_disChanWaterBody=-50000
 DIFF_MAX_disChanWaterBody=50000
 SET_DIFF_MIN_disChanWaterBody=-50000
