--- a/eWaterCycle-Visualization/.classpath
+++ b/eWaterCycle-Visualization/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.6.jar"/>
 	<classpathentry kind="lib" path="lib/Neon.jar"/>
 	<classpathentry kind="lib" path="lib/netcdf/netcdfAll-4.3.jar"/>
+	<classpathentry kind="lib" path="lib/jocl/JOCL-0.1.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
